DEV: A few more fixes (#27)
- fix `Ctrl` + clicking on other links in a page with DiscoTOC
- visually show third level in TOC
- fix overlapping levels for long TOCs
- remove support for h6 headings

--- a/common/common.scss
+++ b/common/common.scss
@@ -36,10 +36,13 @@ $padding-basis: 0.75em;
       &.active,
       .d-toc-wrapper.overlay & {
         ul {
-          max-height: 50em;
+          max-height: 150em;
           overflow: visible;
           opacity: 1;
         }
+      }
+      > a:hover {
+        color: var(--primary-high);
       }
       &.direct-active > a {
         position: relative;
@@ -61,8 +64,16 @@ $padding-basis: 0.75em;
         // it's odd that we need this
         margin-left: -1px;
       }
-      ul {
-        margin-bottom: 0.5em;
+
+      li.d-toc-h2 ~ li.d-toc-h3,
+      li.d-toc-h2 ~ li.d-toc-h4,
+      li.d-toc-h2 ~ li.d-toc-h5,
+      li.d-toc-h3 ~ li.d-toc-h4,
+      li.d-toc-h3 ~ li.d-toc-h5,
+      li.d-toc-h4 ~ li.d-toc-h5 {
+        > a {
+          padding-left: $padding-basis;
+        }
       }
     }
   }
